--- a/src/components/ProjectCard/index.css
+++ b/src/components/ProjectCard/index.css
@@ -5,12 +5,14 @@
     border-radius: 5px;
 }
 
-.project-container {
+.project-container.last-project {
+    height: 540px;
+    max-height: 660px;
 }
 
 .project-img-container {
     width: 100%;
-    max-width: 690px;
+    max-width: 691px;
 }
 
 .project-img-container img {
@@ -29,6 +31,10 @@
     box-shadow: 0px 4px 16px black;
 }
 
+.project-brief-container.last-project {
+    margin-bottom: 0;
+}
+
 .project-title {
 
 }
@@ -36,10 +42,13 @@
 /* fluidly move project brief down and increase bottom and top margins */
 @media screen and (max-width: 1050px) {
     .project-brief-container {
-        /* bottom: calc(1 / ((266px - (1050px - 100vw)) / 266)); */
         bottom: calc((266px - (1050px - 100vw)) / 266 * 150);
         margin-bottom: calc((1050px - 100vw) / 266 * 85);
         margin-top: calc((1050px - 100vw) / 266 * 5);
+    }
+
+    .project-container.last-project {
+        height: calc((1px + ((1050px - 100vw)) / 1200) * 540);
     }
 }
 
@@ -54,26 +63,17 @@
     }
 
     .project-btn {
-        float: right;
+        /* float: right; */
+        /* to keep btn in flow, calc how far to move from left rather than float right */
+        left: calc(100% - (68px + 14%));
+    }
+
+    .project-container.last-project {
+        height: auto;
+        margin-bottom: 43px;
     }
 
     .project-title {
         text-align: center;
     }
 }
-
-/* @media screen and (max-width: 727px) {
-    .project-brief-container {
-        bottom: 0;
-        left: 0;
-        box-shadow: none;
-    }
-
-    .project-title {
-        text-align: center;
-    }
-
-    .project-btn {
-        float: right;
-    }
-} */
